--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.1",
     "react-helmet-async": "^2.0.4",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.21.1",
