--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "streamifier": "^0.1.1",
     "use-reducer-logger": "^1.0.2"
   },
   "devDependencies": {
